2008-08-25  Sven Neumann  <sven@gimp.org>

	* app/dialogs/image-scale-dialog.c: hide the Scale dialog before
	starting to perform the scale operation.

2008-08-25  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/scale-region.c: fixed progress feedback.

2008-08-25  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/scale-region.c: improved progress bar
	calculations. Still buggy though.

2008-08-25  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/scale-region.c: some more cleanups.

2008-08-24  Lars-Peter Clausen  <lars@metafoo.de>

	* plug-ins/pygimp/plug-ins/python-fu-eval.py: Moved execution into
	global namespace. Fixes import statements inside of evaled code.

2008-08-24  Lars-Peter Clausen  <lars@metafoo.de>

	* plug-ins/pygimp/pygimp-pdb.c (pdb_getattro): Fix wrong strcmp
	evaluation.

2008-08-24  Lars-Peter Clausen  <lars@metafoo.de>

	* plug-ins/pygimp/pygimp-drawable.c (drw_transform_rotate,
	drw_transform_flip_simple): Fix method format string, so the
	method is actual callable in a script.

2008-08-24  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimplevelstool.c (gimp_levels_tool_dialog): Set
	page_size for the Ouput/Input Levels lower/upper adjustments to 0
	to adapt to new and more correct value clamping in GTK+.

2008-08-24  Martin Nordholts  <martinn@svn.gnome.org>

	* authors.xml: Updated for 2.6 release.

	* AUTHORS: Regenerated.

2008-08-24  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpnavigationeditor.c
	(gimp_navigation_editor_popup): Prevent the popup from being
	positioned far away from the click position. This is further work
	on bug #362915.

2008-08-24  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpnavigationeditor.c
	(gimp_navigation_editor_popup): Further clarify and simplify.

2008-08-24  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpnavigationeditor.c
	(gimp_navigation_editor_popup): Correct the positioning
	calculation (while still retaining current overall behaviour).
